--- a/hichipper_env.yml
+++ b/hichipper_env.yml
@@ -20,6 +20,7 @@
 # NB: you may need to fix a cli.py file from hichipper
 # navigate to the cli.py file, then run: autopep8 -i cli.py
 
+
 name: hichipper
 channels:
   - conda-forge
@@ -33,7 +34,7 @@ dependencies:
   - binutils_impl_linux-64=2.33.1=he6710b0_7
   - binutils_linux-64=2.33.1=h9595d00_15
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2020.12.5=ha878542_0
+  - ca-certificates=2021.1.19=h06a4308_0
   - cairo=1.14.12=h8948797_3
   - certifi=2020.12.5=py37h89c1867_1
   - curl=7.71.1=hbc83047_1
@@ -81,6 +82,8 @@ dependencies:
   - python_abi=3.7=1_cp37m
   - r=3.5.1=mro351_0
   - r-assertthat=0.2.0=mro351hf348343_0
+  - r-backports=1.1.2=mro351hd10c6a6_0
+  - r-base64enc=0.1_3=mro351hd10c6a6_0
   - r-bh=1.66.0_1=mro351hf348343_0
   - r-boot=1.3_20=mro351_0
   - r-checkpoint=0.4.4=mro351_0
@@ -146,7 +149,9 @@ dependencies:
   - r-revoutils=11.0.0=mro351_0
   - r-revoutilsmath=11.0.0=mro351_0
   - r-rlang=0.2.1=mro351hd10c6a6_0
+  - r-rmarkdown=1.10=mro351hf348343_0
   - r-rpart=4.1_13=mro351hd10c6a6_0
+  - r-rprojroot=1.3_2=mro351hf348343_0
   - r-rstudioapi=0.7=mro351hf348343_0
   - r-runit=0.4.26=mro351_0
   - r-scales=0.5.0=mro351hebc1506_0
@@ -155,10 +160,12 @@ dependencies:
   - r-stringr=1.3.1=mro351hf348343_0
   - r-survival=2.41_3=mro351_0
   - r-tibble=1.4.2=mro351hd10c6a6_0
+  - r-tinytex=0.6=mro351hf348343_0
   - r-utf8=1.1.4=mro351hd10c6a6_0
   - r-viridislite=0.3.0=mro351hf348343_0
   - r-whisker=0.3_2=mro351hf348343_0
   - r-withr=2.1.2=mro351hf348343_0
+  - r-xfun=0.3=mro351hf348343_0
   - r-yaml=2.2.0=mro351hd10c6a6_0
   - readline=8.0=h7b6447c_0
   - samtools=1.11=h6270b1f_0
